--- a/Join.html
+++ b/Join.html
@@ -13,17 +13,17 @@
 
             <label for="mail">이메일(아이디)</label> 
             <br>
-            <input name="email" type="email" class="mail_id" id="mail">
+            <input type="email" type="email" class="mail_id" id="mail" placeholder="(이메일을 입력하세요.)">
             <br><br>
 
             <label for="password">비밀번호 </label> 
             <br>
-            <input name="password" type="password" class="password" id="password"> 
+            <input type="password" type="password" class="password" id="password" placeholder="(6자리 이상 비밀번호를 입력하세요.)"> 
             <br><br>
 
             <label for="name">이름 </label> 
             <br>
-            <input name="username" type="text" class="name" id="name"> 
+            <input type="username" type="text" class="name" id="name"> 
             <br><br>
 
            <div class="join_button_group">
