edit login, signup

--- a/Join.html
+++ b/Join.html
@@ -27,7 +27,7 @@
             <br><br>
 
            <div class="join_button_group">
-             <input type="button" class="join_btn" value="회원가입" onclick="join_check(this.form);"> 
+             <input type="button" class="join_btn" value="회원가입" onclick="signup(this.form);"> 
            </div>        
          </form>
     </div>
