--- a/LogIn.html
+++ b/LogIn.html
@@ -10,16 +10,19 @@
     <div class="login_wrapper">
         <form class="login_form">
            <div class="login_logo">DevTask 로그인</div> <br><br><br>
+
            <label for="mail">이메일</label> 
            <br>
            <input type="email" class="mail_id" id="mail">
            <br><br>
+
            <label for="password">비밀번호 </label> 
            <br>
            <input type="password" class="password" id="password"> 
            <br><br>
+
           <div class="login_button_group">
-            <input type="button" class="login_btn" value="로그인" onclick="check(this.form);"> 
+            <input type="button" class="login_btn" value="로그인" onclick="login(this.form);"> 
             <a href="join.html"><input type="button" class="join_btn" value="회원가입"></a>
           </div>        
         </form>
