--- a/Task/DnD.html
+++ b/Task/DnD.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="main.css" />
+	<link rel="stylesheet" href="DnD.css" />
 </head>
 <body>
 	<div class="app">
@@ -51,6 +51,6 @@
 			</section>
 		</div>
 	</div>
-	<script src="main.js"></script>
+	<script src="DnD.js"></script>
 </body>
 </html>
