--- a/Board/Title/Title.html
+++ b/Board/Title/Title.html
@@ -27,12 +27,12 @@
     <hr>
     <div class="tab_content">
         <input type="radio" name="tabmenu" id="tab01" checked>
-        <label for="tab01">해야할일</label>
+        <label for="tab01">해야할 일</label>
         <input type="radio" name="tabmenu" id="tab02">
-        <label for="tab02">하는중</label>
+        <label for="tab02">하는 중</label>
         <input type="radio" name="tabmenu" id="tab03">
         <label for="tab03">완료</label>
-    
+
         <div class="conbox con1">
             <div class="tbl-header">
                 <table cellpadding="0" cellspacing="0">
@@ -82,8 +82,79 @@
                 </table>
             </div>
         </div>
-        <div class="conbox con2">하는중</div>
-        <div class="conbox con3">완료</div>
+        <div class="conbox con2">
+            <div class="tbl-header">
+                <table cellpadding="0" cellspacing="0">
+                    <thead>
+                    <tr>
+                        <th class="text-center">Maneged By</th>
+                        <th class="text-center">Function</th>
+                        <th class="text-center">Score</th>
+                        <th class="text-center">Importance</th>
+                    </tr>
+                    </thead>
+                </table>
+            </div>
+            <div style="width:100%; height:300px; overflow:auto">
+                <table class="table-fill">
+                    <tbody class="table-hover">
+                    <tr>
+                        <td class="text-center">강지원</td>
+                        <td class="text-center">로그인 기능 구현</td>
+                        <td class="text-center">5</td>
+                        <td class="text-center">High</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">서범수</td>
+                        <td class="text-center">회원정보 수정하기</td>
+                        <td class="text-center">3</td>
+                        <td class="text-center">Middle</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">방승재</td>
+                        <td class="text-center">버튼 추가하기</td>
+                        <td class="text-center">1</td>
+                        <td class="text-center">Low</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">김준희</td>
+                        <td class="text-center">로그인 기능 구현</td>
+                        <td class="text-center">5</td>
+                        <td class="text-center">High</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="conbox con3">
+            <div class="tbl-header">
+                <table cellpadding="0" cellspacing="0">
+                    <thead>
+                    <tr>
+                        <th class="text-center">Function</th>
+                        <th class="text-center">Score</th>
+                        <th class="text-center">Importance</th>
+                    </tr>
+                    </thead>
+                </table>
+            </div>
+            <div style="width:100%; height:300px; overflow:auto">
+                <table class="table-fill">
+                    <tbody class="table-hover">
+                    <tr>
+                        <td class="text-center">로그인 기능 구현</td>
+                        <td class="text-center">5</td>
+                        <td class="text-center">High</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">회원정보 수정하기</td>
+                        <td class="text-center">3</td>
+                        <td class="text-center">Middle</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 <script src="Title.js"></script>
 </body>
