--- a/ProjectRegister.html
+++ b/ProjectRegister.html
@@ -4,33 +4,41 @@
     <meta charset="UTF-8">
     <title>프로젝트 등록</title>
     <link href="projectregister.css" rel="stylesheet">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <div class="prj_wrapper">
         <form class="prj_form">
            <div class="prj_logo">프로젝트 등록</div> <br><br>
+
            <label for="title">주제</label> 
-           <input type="text" class="prj_title" id="title">
+           <input type="text" class="title" id="title">
            <br>
 
-           <div class="invnite_member">
-            <div class="invite_logo">팀원 초대</div><br>
-            <label for="mail">이메일</label> 
-            <br>
-            <input type="email" class="mail_id" id="mail">
-            <br><br>
-            <label for="password">비밀번호 </label> 
-            <br>
-            <input type="password" class="password" id="password"> 
-           </div>
-          
+           <label for="description">메모</label> 
+           <input type="text" class="description" id="description">
            <br><br>
-          <div class="login_button_group">
-            <input type="button" class="login_btn" value="로그인" onclick="check(this.form);"> 
-            <a href="join.html"><input type="button" class="join_btn" value="회원가입"></a>
+
+           <div class="member_wrapper">
+            <div class="invite_logo">팀원 초대</div>
+            <input type="button" class="add_user" value="+" onclick="add_user()"> 
+            <label for="mail"></label><br>
+            <input type="email" class="mail" id="mail">
+           </div>
+           <br><br>
+
+          <div class="button_group">
+            <input type="button" class="cancel_btn" value="취소" onclick="window.close()"> 
+            <input type="button" class="register_btn" value="등록" onclick="prj_register(this.form);"> 
           </div>        
         </form>
      </div>
+<script>
+  function add_user()
+  {
+    document.write("?");
+  }
+</script>    
 <script src="one.js" ></script>     
 </body>
 </html> 
