--- a/ProjectRegister.html
+++ b/ProjectRegister.html
@@ -16,16 +16,15 @@
            <br>
 
            <label for="description">메모</label> 
-           <input type="text" class="description" id="description">
-           <br><br>
+           <input type="text" class="description" id="description"><br><br>
 
+           
            <div class="member_wrapper">
             <div class="invite_logo">팀원 초대</div>
-            <input type="button" class="add_user" value="+" onclick="add_user()"> 
-            <label for="mail"></label><br>
-            <input type="email" class="mail" id="mail">
-           </div>
-           <br><br>
+            <div id="parah"></div>
+            <input type="button" class="add_user" value="+" onclick="addInput()">
+            <input type="button" class="delete_user" value="-" onclick="deleteInput();">
+           </div><br><br> 
 
           <div class="button_group">
             <input type="button" class="cancel_btn" value="취소" onclick="window.close()"> 
@@ -34,9 +33,42 @@
         </form>
      </div>
 <script>
+  var arrInput = new Array(0);
+  var arrInputValue = new Array(0);
+ 
+function addInput() {
+  arrInput.push(arrInput.length);
+  arrInputValue.push("");
+  display();
+}
+ 
+function display() {
+  document.getElementById('parah').innerHTML="";
+  for (intI=0;intI<arrInput.length;intI++) {
+    document.getElementById('parah').innerHTML+=createInput(arrInput[intI], arrInputValue[intI]);
+  }
+}
+ 
+function saveValue(intId,strValue) {
+  arrInputValue[intId]=strValue;
+}  
+ 
+function createInput(id,value) {
+  return "<input type='text' id='test "+ id +"' onChange='javascript:saveValue("+ id +",this.value)' value='"+ 
+ 
+value +"'><br>";
+}
+ 
+function deleteInput() {
+  if (arrInput.length > 0) { 
+     arrInput.pop(); 
+     arrInputValue.pop();
+  }
+  display(); 
+}
   function add_user()
   {
-    document.write("?");
+    const mail = document.createElement('input');
   }
 </script>    
 <script src="one.js" ></script>     
