issue화면 js 다만들고, 쓸데없는 파일들 제거

--- a/Issue/issue.html
+++ b/Issue/issue.html
@@ -30,13 +30,13 @@
     <!-- 데이터베이스에서 입력받음 -->
     <div id="div-middle">
       <!-- 이슈 추가하기 버튼 -->
+      <!-- 근데이게 필요할지모르겠음.. -->
       <div class="addissue">
         <input
         id='go_home'    
         type='button'
         onclick='newPage()'
-        value='+' />
-        <input type="button" class="login_btn" value="서버로 데이터보내기" onclick="getemail();"> 
+        value='+' /> 
       </div>
     </div>
     <!-- 텍스트 입력하는칸 -->
