--- a/Issue/issue.html
+++ b/Issue/issue.html
@@ -16,7 +16,7 @@
   <header>DevDesk</header>
   <!-- 사이드바 영역 -->
   <nav>
-    <!-- 마우스 오버시 사이즈커지고 누르면 화면이동 a함수말고 js로 만들어보고싶음 -->
+    <!-- 마우스 오버시 사이즈커지고 누르면 화면이동 a함수말고 js로 만들d어보고싶음 -->
     <div class="sidebar"><a class="link" href="">board</a></div>
     <div class="sidebar"><a class="link" href="">task</a></div>
     <div class="sidebar"><a class="link" href="">issue</a></div>
