--- a/ProjectRegister.html
+++ b/ProjectRegister.html
@@ -26,7 +26,7 @@
                 <textarea input type="text" class="description_box" id="description"></textarea><br><br>
             </div><br><br>
             <div class="text_wrapper">
-                <div class="invite_logo">팀원 초대</div>
+                <div class="invggite_logo">팀원 초대</div>
             </div>
 
             <div class="btn_wrapper">
