--- a/Home.html
+++ b/Home.html
@@ -27,9 +27,13 @@
         <input type="button" class="prj_btn" value="Add New Project" onclick="location.href=('ProjectRegister.html')"> 
     </div> 
 
-    <div id="projects">
-        <!-- 프로젝트 내용들이 추가되는칸 -->
+
+    <div class="prj_wrapper">
+        <div id="projects">
+            <!-- 프로젝트 내용들이 추가되는칸 -->
+        </div>
     </div>
+    
          
 </body>
 </html>
