--- a/Board/Title/Title.html
+++ b/Board/Title/Title.html
@@ -81,6 +81,9 @@
                     </tbody>
                 </table>
             </div>
+            <div class="add">
+                <button type="button" onclick="location.href='#';">+</button>
+            </div>
         </div>
         <div class="conbox con2">
             <div class="tbl-header">
