--- a/Board/Title.html
+++ b/Board/Title.html
@@ -18,9 +18,9 @@
     </label>
     <div class="sidebar">
         <ul class="sitemap-ul">
-            <li><a href="#">Board</a></li>
-            <li><a href="#">Task</a></li>
-            <li><a href="#">Issue</a></li>
+            <li><a href="/Board/Title.html">Board</a></li>
+            <li><a href="/Task/DnD.html">Task</a></li>
+            <li><a href="/Issue/Home.html">Issue</a></li>
         </ul>
     </div>
     <h1>Storyboard</h1>
@@ -82,7 +82,7 @@
                 </table>
             </div>
             <div class="add">
-                <button type="button" onclick="location.href='#';">+</button>
+                <button type="button" onclick="window.open('BoardRegister.html','_self')">+</button>
             </div>
         </div>
         <div class="conbox con2">
